# nedo_project_code

team_hatakeyama_phase2/multimodal/LLaVA-JP/: .gitignore  README.md  check_caption.py  demo_llava.py  demo_llava_gradio.ipynb  demo_llava_gradio.py  demo_llava_gradio_8bit.py  demo_llava_gradio_gpt2.py  demo_llava_gradio_gpt2_processor.py  docker-compose.yml  pyproject.toml  train_llava.py  upload_model.py
team_hatakeyama_phase2/multimodal/LLaVA-JP/configs/dataset/: cc300k.json  ja-vg-vqa.json  jdocqa.json  jdocqa_only_answerable.json  stair.json  test.json  v1_all_vg_stage_2.json  v1_stage_1.json  v1_stage_2.json  v1_stage_2_after_short_prompt.json  v1_stage_2_curation.json  v2_stage_2.json  v3_stage_2.json  v4_stage_2.json  (+1 more)
team_hatakeyama_phase2/multimodal/LLaVA-JP/docker/: Dockerfile  docker-entrypoint.sh
team_hatakeyama_phase2/multimodal/LLaVA-JP/llavajp/: __init__.py  conversation.py
team_hatakeyama_phase2/multimodal/LLaVA-JP/prepare_datasets/: Synthetic-TextWebImages.sh  TextOCR.sh  anime-with-caption-cc0.sh  commoncatalog-cc-by-ext.sh  commoncatalog-cc-by-recap-diverse_questions.sh  commoncatalog-cc-by-sa-ja-complex.sh  commoncatalog-cc-by-sa-ja.sh  jdocqa.sh  list_items_one_by_one_ja.sh  origin.sh  v0.sh  wit_base.sh
team_hatakeyama_phase2/multimodal/LLaVA-JP/tools/: commoncatalog_300k.py  create_chat_ja_calm2.py  merge_data.py  pdf_to_images.py  resize_images.py  stair_caption_to_llava_format.py  visual_genome_to_llava_format.py  visual_genome_to_llava_format_after_short_prompt.py  visual_genome_to_llava_format_after_short_prompt_curation.py
(+798 files in other folders)
